--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
   </section>
 
   <div class="cta">
-    <a href="https://checkout.seulink.com" target="_blank">💳 COMPRAR AGORA POR R$50</a>
+    <a href="https://pay.cakto.com.br/376xfep_501899" target="_blank">💳 COMPRAR AGORA POR R$50</a>
   </div>
 
   <footer>
